--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "natural": "^5.0.3",
-    "spelling-corrector": "^3.0.0"
+    "spelling-corrector": "^3.0.0",
+    "stopword": "^1.0.7"
   }
 }
